--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+    <link rel="stylesheet" href="styles.css" />
+</head>
+
 <body>
 
 <header>NÃO GOSTO DE SEGUNDAS FEIRAS</header>
@@ -9,6 +13,7 @@
 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Gj3zXP9KCJM?si=dmPGK9eR7_HKX6hk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 
 
 
