--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+<html>
 <head>
     <link rel="stylesheet" href="styles.css" />
     <title>yuri22</title>
@@ -19,3 +21,5 @@
 
 
 </body>
+
+</html>
