--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 
 <header>NÃO GOSTO DE SEGUNDAS FEIRAS</header>
 
-
+<div>
 <h1>NOITE DA RESENHA COM O GOTI!! 🔴 YURI AO VIVO 🔴 +18</h1> 
 <p>#Gótãooo</p>
+</div>
 
 
-
+<div>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Gj3zXP9KCJM?si=dmPGK9eR7_HKX6hk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+</div>
 
 
 
